--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,14 +1,23 @@
-
+- title: Started backend career path on Boot.dev
+  from: June 2024
+  to: present 
+  rank: 69 out of 200k+ 
+  description: Started learning and working on Boot'Devs backend career path.
 
 - title: Student, Pierpont Community and Technical College
   from: 2024
   to: 2024
-  graduated: 2024
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+  graduated: August 2024
+  degree: Associates of Applied Science conentration in Computer Science
+  description: Began my Associates of Applied Science at Pierpont Community College in West Virginia in April of 2024, and graduated August of 2024! 
 
+- title: Hired as Resident I.T. Worker
+  from: March 2024
+  to: present
+  description: Hired as the resident technology worker at BCF. 
 
 - title: Student, University of Maine at Augusta
   from: 2023
   to: Present
-  description: Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+  description: Bachelors Degree in Computer Information Systems 
  
