--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,3 +1,7 @@
+- title: Received Rising Scholar Award from University of Maine at Augusta 
+  from: September 2024 
+  description: Nominated and received the Rising Scholars award from UMA
+
 - title: Started backend career path on Boot.dev
   from: June 2024
   to: present 
