feat: added employment to timeline

--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,3 +1,8 @@
+- title: Hired at UnlockedLabs
+  from: October 2024
+  to: present 
+  description: Hired for my first software job!
+
 - title: Received Rising Scholar Award from University of Maine at Augusta 
   from: September 2024 
   description: Nominated and received the Rising Scholars award from UMA
