--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,3 +1,6 @@
+- title: First Live-Project Beta Review
+  from: January 2025
+  description: Reviewed a live-project series for Manning, pretty cool experience.
 - title: First Book Review (Pre-Published)
   from: December 2024 
   description: My first technical review of a book ->  "Learn JavaScript with AI by Laurence Svekis and Priti Yadav".
