--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,3 +1,7 @@
+- title: Graduated from TESU 
+  from: July 2025 
+  description: Graduated with a Bachelors in Computer Science from Thomas Edison State University.
+
 - title: First Live-Project Beta Review
   from: January 2025
   description: Reviewed a live-project series for Manning, pretty cool experience.
