--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,5 +1,5 @@
 - title: Graduated from TESU 
-  from: July 2025 
+  from: August 2023 - July 2025 
   description: Graduated with a Bachelors in Computer Science from Thomas Edison State University.
 
 - title: First Live-Project Beta Review
